// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageNumbers > should not render anything when there are no pages 1`] = `<DocumentFragment />`;

exports[`PageNumbers > should not render anything when there is one page 1`] = `<DocumentFragment />`;

exports[`PageNumbers > should render correctly when there are 10 pages and the current page is 1 1`] = `
<DocumentFragment>
  <nav
    class="govuk-pagination justify-center"
  >
    <ul
      class="govuk-pagination__list"
    >
       
      <li
        class="govuk-pagination__item govuk-pagination__item--current"
      >
        <a
          aria-label="Page 1"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          1
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 2"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          2
        </a>
      </li>
      <li
        class="govuk-pagination__item govuk-pagination__item--ellipses"
      >
        ...
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 10"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          10
        </a>
      </li>
    </ul>
    <div
      class="govuk-pagination__next"
    >
      <a
        aria-label="Page 10"
        class="govuk-link govuk-pagination__link"
        data-module="govuk-button"
        draggable="false"
        href=""
        rel="next"
        role="button"
      >
        <span
          class="govuk-pagination__link-title"
        >
          Next
        </span>
         
        <svg
          aria-hidden="true"
          class="govuk-pagination__icon govuk-pagination__icon--next"
          focusable="false"
          height="13"
          viewBox="0 0 15 13"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"
          />
        </svg>
      </a>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`PageNumbers > should render correctly when there are 10 pages and the current page is 5 1`] = `
<DocumentFragment>
  <nav
    class="govuk-pagination justify-center"
  >
    <div
      class="govuk-pagination__prev"
    >
      <a
        aria-label="Page 10"
        class="govuk-link govuk-pagination__link"
        data-module="govuk-button"
        draggable="false"
        href=""
        rel="prev"
        role="button"
      >
        <svg
          aria-hidden="true"
          class="govuk-pagination__icon govuk-pagination__icon--prev"
          focusable="false"
          height="13"
          viewBox="0 0 15 13"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"
          />
        </svg>
        <span
          class="govuk-pagination__link-title"
        >
          Previous
        </span>
      </a>
    </div>
    <ul
      class="govuk-pagination__list"
    >
       
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 1"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          1
        </a>
      </li>
      <li
        class="govuk-pagination__item govuk-pagination__item--ellipses"
      >
        ...
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 4"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          4
        </a>
      </li>
      <li
        class="govuk-pagination__item govuk-pagination__item--current"
      >
        <a
          aria-label="Page 5"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          5
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 6"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          6
        </a>
      </li>
      <li
        class="govuk-pagination__item govuk-pagination__item--ellipses"
      >
        ...
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 10"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          10
        </a>
      </li>
    </ul>
    <div
      class="govuk-pagination__next"
    >
      <a
        aria-label="Page 10"
        class="govuk-link govuk-pagination__link"
        data-module="govuk-button"
        draggable="false"
        href=""
        rel="next"
        role="button"
      >
        <span
          class="govuk-pagination__link-title"
        >
          Next
        </span>
         
        <svg
          aria-hidden="true"
          class="govuk-pagination__icon govuk-pagination__icon--next"
          focusable="false"
          height="13"
          viewBox="0 0 15 13"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"
          />
        </svg>
      </a>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`PageNumbers > should render correctly when there are less than 10 pages 1`] = `
<DocumentFragment>
  <nav
    class="govuk-pagination justify-center"
  >
    <ul
      class="govuk-pagination__list"
    >
       
      <li
        class="govuk-pagination__item govuk-pagination__item--current"
      >
        <a
          aria-label="Page 1"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          1 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 2"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          2 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 3"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          3 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 4"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          4 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 5"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          5 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 6"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          6 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 7"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          7 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 8"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          8 
        </a>
      </li>
    </ul>
    <div
      class="govuk-pagination__next"
    >
      <a
        aria-label="Page 8"
        class="govuk-link govuk-pagination__link"
        data-module="govuk-button"
        draggable="false"
        href=""
        rel="next"
        role="button"
      >
        <span
          class="govuk-pagination__link-title"
        >
          Next
        </span>
         
        <svg
          aria-hidden="true"
          class="govuk-pagination__icon govuk-pagination__icon--next"
          focusable="false"
          height="13"
          viewBox="0 0 15 13"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"
          />
        </svg>
      </a>
    </div>
  </nav>
</DocumentFragment>
`;
